# purdue-cs573-project

./: .gitignore  LICENSE  README.md  RandomForest.ipynb  Tweet_NLP.ipynb  bert.ipynb  deep_learning.py  deep_learning_origin_data.py  embed_bag_of_words.py  embed_glove.py  embed_tf_idf.py  embed_word2vec.py  main.ipynb  mypy.ini  preprocess.py  pylintrc  pyproject.toml  shuang_random_forest_bag_of_words.ipynb  shuang_random_forest_tf_idf.ipynb  shuang_random_forest_word2vec.ipynb  train_model_pipeline.ipynb
.github/workflows/: build.yml
assets/: .gitignore  embedded_bag_of_words.npz
libs/: embedding.py  preprocessing.py
libs/embedding/: __init__.py  bag_of_words.py  glove.py  tf_idf.py  word2vec.py
results/: RandomForest_glove.txt  rfc.txt  rfc_glove.txt
