[tool.poetry]
name = "purdue-cs573-project"
version = "0.1.0"
description = ""
authors = ["Shuang Wu <seanwu1105@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.5"
pandas = "^1.3.4"
numpy = "^1.21.3"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
