[tool.poetry]
name = "purdue-cs573-project"
version = "0.1.0"
description = ""
authors = ["Shuang Wu <seanwu1105@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.5"
pandas = "^1.3.4"
numpy = "~1.21.0"
matplotlib = "^3.4.3"
scikit-learn = "^1.0.1"
nltk = "^3.6.5"
gensim = "^4.1.2"
scipy = "^1.7.1"
xgboost = "^1.5.0"
tensorflow = "^2.7.0"
tensorflow-text = "^2.7.3"
tf-models-official = "^2.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
jupyter = "^1.0.0"
pylint = "^2.11.1"
mypy = "^0.910"
autopep8 = "^1.6.0"
pandas-stubs = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
